aggiunti primi test, modifiche alle directories per lavorare con PyCharm
